kubernetes/main/apps/home-automation/namespace.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/namespace_v1.json
apiVersion: v1
kind: Namespace
metadata:
  name: home-automation
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    pod-security.kubernetes.io/enforce: privileged # required for govee2mqtt to allow hostNetwork and zigbee2mqtt to connect to usb
